Improve tr locales

--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -10,7 +10,7 @@
     <string name="privacy_policy_url" translatable="false">https://zaneschepke.com/wgtunnel-docs/privacypolicy.html</string>
     <string name="error_file_extension">Dosya bir .conf veya .zip değil</string>
     <string name="turn_off_tunnel">Eylem tünelin kapalı olmasını gerektiriyor</string>
-    <string name="no_tunnels">Henüz tünel eklenmedi!</string>
+    <string name="no_tunnels">Henüz bir tünel ekli değil!</string>
     <string name="tunnel_exists">Tünel adı zaten var</string>
     <string name="discord_url" translatable="false">https://discord.gg/rbRRNh6H7V</string>
     <string name="watcher_notification_title">Bildirim Hizmeti</string>
@@ -21,23 +21,23 @@
     <string name="vpn_permission_required">Uygulamanın düzgün çalışması için VPN izni gereklidir. Bu izin başlatılmıyorsa, lütfen resmi WireGuard mobil uygulaması için telefon ayarlarınızda \"Her zaman açık VPN\" i devre dışı bırakın ve tekrar deneyin.</string>
     <string name="notification_permission_required">Bildirim izni gerekli.</string>
     <string name="open_settings">Ayarları Aç</string>
-    <string name="add_trusted_ssid">Güvenilir wifi adı ekleyin</string>
+    <string name="add_trusted_ssid">Güvenilir wifi adı ekle</string>
     <string name="tunnels">Tüneller</string>
     <string name="enable_auto_tunnel">Otomatik tünellemeyi başlat</string>
     <string name="disable_auto_tunnel">Otomatik tünellemeyi durdur</string>
     <string name="tunnel_mobile_data">Mobil veri üzerinde tünel</string>
-    <string name="background_location_reason">Arka planda Wi-Fi SSID\'yi almak için \"Her zaman izin ver\" konum izni gereklidir. Bu özellik için izin gereklidir.</string>
+    <string name="background_location_reason">Wi-Fi SSID\'sini arka planda almak için konum iznini \"Her zaman izin ver\" olarak ayarlayın. Bu özellik için izin gereklidir.</string>
     <string name="location_permission_reason">Bu özelliğin düzgün çalışması için konum izni gereklidir.</string>
-    <string name="one_tunnel_required">Bu özelliği kullanmak için en az bir tünel gereklidir</string>
+    <string name="one_tunnel_required">Bu özelliği kullanabilmek için en az bir tünel gereklidir.</string>
     <string name="retry">"Yeniden dene"</string>
-    <string name="privacy_policy">Gizlilik Politikasını Görüntüle</string>
+    <string name="privacy_policy">Gizlilik Politikası</string>
     <string name="okay">Tamam</string>
     <string name="tunnel_on_ethernet">Ethernet üzerinde tünel</string>
     <string name="prominent_background_location_message">Bu özellik, uygulama kapalıyken bile Wi-Fi SSID izlemesini etkinleştirmek için arka plan konumu izni gerektirir. Daha fazla bilgi için lütfen Destek ekranında bağlantısı verilen Gizlilik Politikasına bakın.</string>
     <string name="prominent_background_location_title">Arka Plan Konum Açıklaması</string>
     <string name="thank_you">WG Tunnel\'i kullandığınız için teşekkür ederiz!</string>
-    <string name="trusted_ssid_empty_description">SSID girin</string>
-    <string name="trusted_ssid_value_description">SSID\'yi Gönder</string>
+    <string name="trusted_ssid_empty_description">SSID\'yi gir</string>
+    <string name="trusted_ssid_value_description">SSID\'yi gönder</string>
     <string name="config_validation" translatable="false">[Interface]</string>
     <string name="add_tunnels_text">Dosyadan veya ZIP\'ten ekle</string>
     <string name="open_file">Dosya Aç</string>
@@ -48,7 +48,7 @@
     <string name="add_tunnel">Tünel Ekle</string>
     <string name="exclude">Hariç tut</string>
     <string name="include">Dahil et</string>
-    <string name="tunnel_all">Tünel tüm uygulamalar</string>
+    <string name="tunnel_all">Tüm uygulamaları dahil et</string>
     <string name="config_changes_saved">Yapılandırma değişiklikleri kaydedildi.</string>
     <string name="save_changes">Kaydet</string>
     <string name="icon">Simge</string>
@@ -63,10 +63,10 @@
     <string name="addresses">Adresler</string>
     <string name="dns_servers">DNS sunucuları</string>
     <string name="mtu">MTU</string>
-    <string name="peer">Akran</string>
+    <string name="peer">Eş (peer)</string>
     <string name="allowed_ips">İzin verilen IP\'ler</string>
-    <string name="endpoint">Uç nokta</string>
-    <string name="transfer">Nakil</string>
+    <string name="endpoint">Uç nokta (endpoint)</string>
+    <string name="transfer">Aktar</string>
     <string name="last_handshake">Son tokalaşma</string>
     <string name="name">Ad</string>
     <string name="restart">Tüneli Yeniden Başlat</string>
@@ -104,21 +104,21 @@
     <string name="create_import">Sıfırdan oluştur</string>
     <string name="turn_off_auto">Eylem, otomatik tünelin devre dışı bırakılmasını veya duraklatılmasını gerektirir</string>
     <string name="turn_on_tunnel">Eylem aktif tünel gerektirir</string>
-    <string name="add_peer">Akran ekle</string>
-    <string name="done">Bitti</string>
+    <string name="add_peer">Eş (peer) ekle</string>
+    <string name="done">Tamamlandı</string>
     <string name="interface_">Arayüz</string>
     <string name="rotate_keys">Tuşları döndür</string>
     <string name="private_key">Özel anahtar</string>
     <string name="copy_public_key">Genel anahtarı kopyala</string>
-    <string name="base64_key">base64 anahtarı</string>
-    <string name="comma_separated_list">virgülle ayrılmış liste</string>
-    <string name="listen_port">Portu dinle</string>
-    <string name="random">(rastgele)</string>
-    <string name="optional">(isteğe bağlı)</string>
-    <string name="optional_no_recommend">(isteğe bağlı, önerilmez)</string>
+    <string name="base64_key">Base64 anahtarı</string>
+    <string name="comma_separated_list">Virgül ile ayrılmış liste</string>
+    <string name="listen_port">Bağlantı noktası</string>
+    <string name="random">(Rastgele)</string>
+    <string name="optional">(İsteğe bağlı)</string>
+    <string name="optional_no_recommend">(İsteğe bağlı, önerilmez)</string>
     <string name="preshared_key">Ön paylaşımlı anahtar</string>
     <string name="seconds">saniye</string>
-    <string name="persistent_keepalive">Kalıcı canlı tutma</string>
+    <string name="persistent_keepalive">Kalıcı olarak canlı tutma</string>
     <string name="cancel">İptal</string>
     <string name="error_authentication_failed">Kimlik doğrulama başarısız oldu</string>
     <string name="error_authorization_failed">Yetkilendirilemedi</string>
@@ -135,8 +135,8 @@
     <string name="email_subject">WG Tunnel Desteği</string>
     <string name="email_chooser">Bir e-posta gönderin…</string>
     <string name="go">git</string>
-    <string name="docs_description">Belgeleri okuyun</string>
-    <string name="discord_description">Topluluğa katılın</string>
+    <string name="docs_description">Belgeleri oku</string>
+    <string name="discord_description">Topluluğa katıl</string>
     <string name="email_description">Bana e-posta gönder</string>
     <string name="support_help_text">Sorun yaşıyorsanız, iyileştirme fikirleriniz varsa veya sadece etkileşimde bulunmak istiyorsanız, aşağıdaki kaynaklar mevcuttur:</string>
     <string name="kernel">Çekirdek</string>
@@ -158,17 +158,17 @@
     <string name="pause">Duraklat</string>
     <string name="paused">duraklatıldı</string>
     <string name="active">aktif</string>
-    <string name="tunneling_apps">Tünelleme uygulamaları</string>
-    <string name="included">dahil</string>
-    <string name="excluded">hariç</string>
+    <string name="tunneling_apps">Tünellenen uygulamalar</string>
+    <string name="included">dahil edildi</string>
+    <string name="excluded">hariç tutuldu</string>
     <string name="all">tümü</string>
     <string name="always_on_disabled">Her zaman açık VPN bir tünel başlatmaya çalıştı, ancak bu özellik ayarlarda devre dışı bırakıldı.</string>
     <string name="no_email_detected">E-posta uygulaması algılanmadı</string>
     <string name="no_browser_detected">Tarayıcı algılanmadı</string>
     <string name="logs_saved">İndirilenlere kaydedilen günlükler</string>
-    <string name="open_issue">Bir sorun açın</string>
-    <string name="read_logs">Günlükleri okuyun</string>
-    <string name="auto">(otomatik)</string>
+    <string name="open_issue">Bir sorun bildir</string>
+    <string name="read_logs">Günlükleri oku</string>
+    <string name="auto">(Otomatik)</string>
     <string name="config_parse_error">Yapılandırma ayrıştırılamadı</string>
     <string name="incorrect_pin">PIN kodu yanlış</string>
     <string name="pin_created">Pin başarıyla oluşturuldu</string>
@@ -183,9 +183,14 @@
     <string name="general">Genel</string>
     <string name="edit_tunnel">Tüneli düzenle</string>
     <string name="tunnel">Tünel</string>
-    <string name="disabled">devre dışı</string>
+    <string name="disabled">Devre dışı</string>
     <string name="auto_on">Otomatik ayarlamayı sürdür</string>
     <string name="auto_off">Otomatik ayarlamayı duraklat</string>
     <string name="auto_tun_on">Otomatik tüneli sürdür</string>
     <string name="auto_tun_off">Otomatik tüneli duraklat</string>
+    <string name="version">Sürüm</string>
+    <string name="mode">Mod</string>
+    <string name="userspace">Kullanıcı alanı</string>
+    <string name="settings">Ayarlar</string>
+    <string name="support">Destek</string>
 </resources>
