--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -108,7 +108,6 @@
     <string name="discord_description">Join the community</string>
     <string name="email_description">Send me an email</string>
     <string name="support_help_text">If you are experiencing issues, have improvement ideas, or just want to engage, the following resources are available:</string>
-    <string name="kernel">Kernel</string>
     <string name="use_kernel">Use kernel module</string>
     <string name="error_ssid_exists">SSID already exists</string>
     <string name="error_root_denied">Root shell denied</string>
@@ -140,7 +139,7 @@
     <string name="pin_created">Pin successfully created</string>
     <string name="enter_pin">Enter your pin</string>
     <string name="create_pin">Create pin</string>
-    <string name="enable_app_lock">Enabled app lock</string>
+    <string name="enable_app_lock">Enable app lock</string>
     <string name="restart_on_ping">Restart on ping fail (beta)</string>
     <string name="mobile_data_tunnel">Set as mobile data tunnel</string>
     <string name="set_primary_tunnel">Set as primary tunnel</string>
@@ -158,4 +157,21 @@
     <string name="userspace">Userspace</string>
     <string name="settings">Settings</string>
     <string name="support">Support</string>
+    <string name="backend">Backend</string>
+    <string name="kernel">Kernel</string>
+    <string name="use_amnezia">"Use Amnezia userspace "</string>
+    <string name="junk_packet_count">Junk packet count</string>
+    <string name="junk_packet_minimum_size">Junk packet minimum size</string>
+    <string name="junk_packet_maximum_size">Junk packet maximum size</string>
+    <string name="init_packet_junk_size">Init packet junk size</string>
+    <string name="response_packet_junk_size">Response packet junk size</string>
+    <string name="init_packet_magic_header">Init packet magic header</string>
+    <string name="response_packet_magic_header">Response packet magic header</string>
+    <string name="transport_packet_magic_header">Transport packet magic header</string>
+    <string name="underload_packet_magic_header">Underload packet magic header</string>
+    <string name="telegram_url" translatable="false">https://t.me/wgtunnel</string>
+    <string name="unsure_how">if you are unsure how to proceed</string>
+    <string name="see_the">See the</string>
+    <string name="getting_started_url" translatable="false">https://zaneschepke.com/wgtunnel-docs/getting-started.html</string>
+    <string name="getting_started_guide">Getting started guide</string>
 </resources>
